ingress/nginx.yaml
# INGRESS NGINX HTTP
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-http
  namespace: default
  labels:
    name: nginx-ingress
  annotations:
    # https://kubernetes.github.io/ingress-nginx/user-guide/tls/#server-side-https-enforcement-through-redirect
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#backend-protocol
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#enable-cors
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type"
    nginx.ingress.kubernetes.io/cors-expose-headers: ""
    nginx.ingress.kubernetes.io/cors-allow-credentials: "false"
    nginx.ingress.kubernetes.io/cors-max-age: "600"
spec:
  tls:
    - secretName: nginx-secret-tls
      hosts:
        - "*.kube.test"
        - rest.kube.test
        - kube.test
  rules:
    - host: rest.kube.test
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rest-service
                port:
                  number: 80
---
# INGRESS NGINX GRPC
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-grpc
  namespace: default
  labels:
    name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
    - secretName: nginx-secret-tls
      hosts:
        - "*.kube.test"
        - grpc.kube.test
        - kube.test
  rules:
    - host: grpc.kube.test
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grpc-service
                port:
                  number: 80
